--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,10 +32,13 @@ set_property(INSTALL "vimage.exe"
 set(CPACK_GENERATOR WIX)
 set(CPACK_WIX_UPGRADE_GUID F1CA83FC-4F1B-42A3-B033-4D597CAD1A37)
 set(CPACK_WIX_TEMPLATE "${CMAKE_SOURCE_DIR}/CMake/WIX.template.in")
+set(CPACK_WIX_PRODUCT_ICON "${CMAKE_SOURCE_DIR}/vmg/images/cat_eye2.ico")
+SET(CPACK_WIX_EXTENSIONS WixUtilExtension)
 
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
 set(CPACK_PACKAGE_VERSION_MAJOR "0")
 set(CPACK_PACKAGE_VERSION_MINOR "5")
-set(CPACK_PACKAGE_VERSION_PATCH "5")
+set(CPACK_PACKAGE_VERSION_PATCH "6")
 set(CPACK_PACKAGE_EXECUTABLES "vimage;vimage")
 
 include(CPack)
