--- a/CMake/WIX.template.in
+++ b/CMake/WIX.template.in
@@ -2,9 +2,6 @@
 
 <?include "cpack_variables.wxi"?>
 
-<?define ProdName="$(var.CPACK_PACKAGE_NAME)" ?>
-<?define ExeName="$(var.ProdName).exe" ?>
-
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" @CPACK_WIX_CUSTOM_XMLNS_EXPANDED@
     RequiredVersion="3.6.3303.0">
 
@@ -44,7 +41,7 @@
 
         <UIRef Id="$(var.CPACK_WIX_UI_REF)" />
 
-        <!-- Add to checkbox to launch program after install ²-->
+        <!-- Add to checkbox to launch program after install -->
         <UI>
             <UIRef Id="$(var.CPACK_WIX_UI_REF)" />
             <Publish Dialog="ExitDialog"
@@ -54,7 +51,7 @@
         </UI>
         <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="Launch vimage" />
         <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOX" Value="1"/>
-        <Property Id="WixShellExecTarget" Value="[#vimage.exe]" />
+        <Property Id="WixShellExecTarget" Value="[#CM_FP_vimage.exe]" />
         <CustomAction Id="LaunchApplication" BinaryKey="WixCA" DllEntry="WixShellExec" Impersonate="yes"/>
 
         <?include "properties.wxi"?>
