Fix up packaging on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,8 +55,11 @@ endif()
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
 set(CPACK_PACKAGE_VERSION_MAJOR "0")
 set(CPACK_PACKAGE_VERSION_MINOR "9")
-set(CPACK_PACKAGE_VERSION_PATCH "0")
+set(CPACK_PACKAGE_VERSION_PATCH "1")
 set(CPACK_PACKAGE_EXECUTABLES "vimage;vimage")
+set(CPACK_PACKAGE_CONTACT "zeo1@rotatingpenguin.com")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "vimage desktop image file viewer")
+set(CPACK_PACKAGE_DESCRIPTION "vimage desktop image file viewer")
 
 if (WIN32)
   set(CPACK_GENERATOR WIX)
@@ -71,6 +74,7 @@ elseif(UNIX)
   set(CPACK_GENERATOR DEB)
   set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Christopher Bruns")
   set(CPACK_DEBIAN_PACKAGE_DEPENDS "")
+  set(CPACK_DEBIAN_PACKAGE_RELEASE 1)
   set(CPACK_SET_DESTDIR "ON")
 endif()
 
