Add "run" checkbox in installer UI using WiX patch file, so template is no longer needed. Proof-of-concept feature selection in installer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ if(GIT_FOUND)
     # Put another next to the installed executable for installed use
     install(FILES "${CMAKE_SOURCE_DIR}/vmg/git_hash.txt"
       DESTINATION "."
+      COMPONENT App
     )
 endif()
 
@@ -88,6 +89,7 @@ add_custom_target(RunPyInstaller ALL
 if (WIN32)
   install(DIRECTORY "${CMAKE_BINARY_DIR}/dist/vimage/"
       DESTINATION "."
+      COMPONENT App
   )
   set_property(INSTALL "vimage.exe"
       PROPERTY CPACK_START_MENU_SHORTCUTS "vimage"
@@ -109,10 +111,40 @@ set(CPACK_PACKAGE_CONTACT "zeo1@rotatingpenguin.com")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "vimage desktop image file viewer")
 set(CPACK_PACKAGE_DESCRIPTION "vimage desktop image file viewer")
 
+set(CPACK_COMPONENTS_ALL
+    App
+    FileAssociations
+    JpegFileType
+)
+set(CPACK_COMPONENT_APP_DISPLAY_NAME "vimage app")
+set(CPACK_COMPONENT_APP_DESCRIPTION "The vimage application.")
+set(CPACK_COMPONENT_APP_REQUIRED ON)  # always install the vimage app
+
+set(CPACK_COMPONENT_FILEASSOCIATIONS_DISPLAY_NAME "File associations")
+set(CPACK_COMPONENT_FILEASSOCIATIONS_DESCRIPTION "Make vimage the default app for these image file types.")
+set(CPACK_COMPONENT_FILEASSOCIATIONS_DEPENDS App)
+# Empty components cause problems with WiX, so install a dummy file
+configure_file("${CMAKE_SOURCE_DIR}/vmg/git_hash.txt" "${CMAKE_BINARY_DIR}/vmg/file_association_component"
+    COPYONLY
+)
+install(FILES "${CMAKE_BINARY_DIR}/vmg/file_association_component"
+  DESTINATION "."
+  COMPONENT FileAssociations
+)
+
+set(CPACK_COMPONENT_JPEGFILETYPE_DISPLAY_NAME "*.jpg *.jpeg")
+set(CPACK_COMPONENT_JPEGFILETYPE_DESCRIPTION "JPEG image files.")
+set(CPACK_COMPONENT_JPEGFILETYPE_DEPENDS FileAssociations)
+# Dummy install rule to maybe avoid WiX errors
+install(CODE "MESSAGE(\"Something about jpeg files.\")"
+    DESTINATION "."
+    COMPONENT JpegFileType
+)
+
 if (WIN32)
   set(CPACK_GENERATOR WIX)
   set(CPACK_WIX_UPGRADE_GUID F1CA83FC-4F1B-42A3-B033-4D597CAD1A37)
-  set(CPACK_WIX_TEMPLATE "${CMAKE_SOURCE_DIR}/CMake/WIX.template.in")
+  set(CPACK_WIX_UI_REF WixUI_FeatureTree)  # To show selectable feature tree
   set(CPACK_WIX_PRODUCT_ICON "${CMAKE_SOURCE_DIR}/vmg/images/vimage2.ico")
   SET(CPACK_WIX_EXTENSIONS WixUtilExtension)
   set(CPACK_WIX_PATCH_FILE "${CMAKE_SOURCE_DIR}/CMake/wix_patch.xml")
